--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.1
 numpy==1.22.3
-psycopg2==2.9.3
+psycopg2-binary==2.9.3
 pydantic==1.9.1
 six==1.16.0
 SQLAlchemy==1.4.37
