--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-Flask==2.1.1
-Flask-Cors==3.0.10
-Flask-SQLAlchemy==2.5.1
-fuzzy-c-means==1.6.4
-gunicorn==20.1.0
-numpy==1.22.3
-psycopg2-binary==2.9.3
-pydantic==1.9.1
-SQLAlchemy==1.4.37
+Flask
+Flask-Cors
+Flask-SQLAlchemy
+fuzzy-c-means
+gunicorn
+numpy
+psycopg2-binary
+SQLAlchemy
